@@ -34,6 +34,10 @@
 | Correct error message when updating service
 | https://github.com/knative/client/pull/778[#778]
 
+| 🎁
+| Add `-a` flag as an alias for `--annotation`
+| https://github.com/knative/client/pull/782[#782]
+
 |===
 
 ## v0.13.1 (2020-03-25)
